--- a/views/campgrounds.ejs
+++ b/views/campgrounds.ejs
@@ -1,3 +1,4 @@
+<% include partials/header %>
 <h1>This is campground</h1>
 
 <% campgrounds.forEach(function(campground){ %>
@@ -5,7 +6,7 @@
         <h2><%= campground.name %></h2>
         <img src="<%= campground.image %>">
     </div>
-    
-    
 <% }); %> 
+
+<% include partials/footer %>
 
