--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -1,4 +1,7 @@
+<% include partials/header %>
 <h1>Landing Page</h1>
 <p>Welcome to GelpCamp</p>
 
 <a href="/campgrounds"> View Camprounds</a>
+
+<% include partials/footer %>
