--- a/views/campgrounds.ejs
+++ b/views/campgrounds.ejs
@@ -1,12 +1,16 @@
 <% include partials/header %>
 <h1>This is campground</h1>
 
+<a href="/campgrounds/new">Add New Campground</a>
+
 <% campgrounds.forEach(function(campground){ %>
     <div>
         <h2><%= campground.name %></h2>
         <img src="<%= campground.image %>">
     </div>
 <% }); %> 
+
+
 
 <% include partials/footer %>
 
