add form,nav, and header styles

--- a/views/campgrounds.ejs
+++ b/views/campgrounds.ejs
@@ -1,16 +1,40 @@
 <% include partials/header %>
-<h1>This is campground</h1>
 
-<a href="/campgrounds/new">Add New Campground</a>
 
-<% campgrounds.forEach(function(campground){ %>
-    <div>
-        <h2><%= campground.name %></h2>
-        <img src="<%= campground.image %>">
+    <div class="container">
+        <header class="jumbotron">
+            <div class="container">
+                <h1>Welcome to GelpCamp!</h1>
+                <p>View our hand-picked campgrounds from all over the world</p>
+                <p>
+                    <a class="btn btn-info btn-lg" href="/campgrounds/new">Add New Campground</a>
+                </p>
+            </div>
+
+        </header>
+
+        <div class="row tex-center">
+            <% campgrounds.forEach(function(campground){ %>
+                <div class="col-md-3 col-sm-6">
+                    <div class="thumbnail">
+                        <img src="<%= campground.image %>">
+                        <div class="caption">
+                            <h4>
+                                <%= campground.name %>
+                            </h4>
+                        </div>
+                    </div>
+
+
+                </div>
+                <% }); %>
+
+
+        </div>
+
+
+
+
     </div>
-<% }); %> 
 
-
-
-<% include partials/footer %>
-
+    <% include partials/footer %>
