--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,6 +22,9 @@
                             <h4>
                                 <%= campground.name %>
                             </h4>
+                            <p>
+                                <a href="/campgrounds/<%= campground.id %>" class="btn btn-success btn-block">More Info</a>
+                            </p>
                         </div>
                     </div>
 
