--- a/views/new.ejs
+++ b/views/new.ejs
@@ -12,6 +12,9 @@
                         <input class="form-control" type="text" name="image" placeholder="image url">
                     </div>
                     <div class="form-group">
+                        <textarea rows="5" style="resize: none;" class="form-control" type="textarea" name="description" placeholder="description"></textarea>
+                    </div>
+                    <div class="form-group">
                         <button class="btn btn-primary btn-block">Submit</button>
                     </div>
 
